<resources>
    <string name="app_name">My Application</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_save_db">Save To DB</string>
    <string name="button_query_db">Query</string>
    <string name="chooser_title">choose</string>
    <string name="item1">item1</string>
    <string name="group_item1">group_item1</string>
    <string name="group_item2">group_item2</string>
    <string name="submenu_title">submenu_title</string>
    <string name="submenu_item1">submenu_item1</string>
    <string name="title_activity_entry_list">EntryListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading...</string>
    <string name="no_contacts">no contacts</string>
    <string name="search_match_other">Matches Other Field</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_left_side_nav">LeftSideNavActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
