<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item1"
        android:enabled="true"
        android:icon="@drawable/icons8_share"
        android:title="@string/item1"
        android:visible="true"
        app:showAsAction="ifRoom|withText"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
    <group android:id="@+id/group">
        <item android:id="@+id/group_item1"
            android:title="@string/group_item1"
            android:icon="@drawable/icons8_share" />
        <item android:id="@+id/group_item2"
            android:title="@string/group_item2"
            android:icon="@drawable/icons8_share" />
    </group>
    <item android:id="@+id/submenu"
        android:title="@string/submenu_title"
        app:showAsAction="ifRoom|withText" >
        <menu>
            <item android:id="@+id/submenu_item1"
                android:title="@string/submenu_item1" />
        </menu>
    </item>
</menu>